Fix styling issues on mobile

--- a/src/components/Jumbotron/Jumbotron.css
+++ b/src/components/Jumbotron/Jumbotron.css
@@ -9,7 +9,7 @@
     align-items: center;
 }
 
-p {
+.j-text {
     font-size: 1.3rem;
 }
 
@@ -18,7 +18,6 @@ p {
 }
 
 .jumbotron-text {
-    min-width: 400px;
     max-width: 700px;
 }
 
